force-app/main/default/objects/Form_Answer__c/Form_Answer__c.object-meta.xml
<CustomObject>
    <label>Form Answer</label>
    <pluralLabel>Form Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
<nameField>
    <label>Answer Name</label>
    <type>Text</type>
</nameField>
</CustomObject>