force-app/main/default/objects/Form_Answer__c/fields/Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Form_Question__c</fullName>
    <label>Form Question</label>
    <type>Lookup</type>
    <referenceTo>Form_Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>