force-app/main/default/objects/Form_Answer__c/fields/Form_Response__c.field-meta.xml
    <CustomField>
        <fullName>Form_Response__c</fullName>
        <label>Form Response</label>
        <type>MasterDetail</type>
        <referenceTo>Form_Response__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
<relationshipOrder>0</relationshipOrder>
    </CustomField>