force-app/main/default/objects/Form_Answer__c/fields/Value_Json__c.field-meta.xml
<CustomField>
    <fullName>Value_Json__c</fullName>
    <label>Value (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>