force-app/main/default/objects/Form_Answer__c/fields/Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Value_Text__c</fullName>
    <label>Value (Text)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>